--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "nativescript-quickblox",
 	"description": "NativeScript QuickBlox JS SDK",
-	"version": "2.8.0-tns-beta",
+	"version": "2.8.0",
 	"homepage": "https://quickblox.com/developers/Javascript",
 	"main": "src/qbMain.js",
 	"license": "(Apache-2.0)",
