--- a/package.json
+++ b/package.json
@@ -58,9 +58,15 @@
 	},
 	"dependencies": {
 		"crypto-js": "3.1.2-2",
-		"nativescript-xmpp-client": "1.2.0"
+		"nativescript-xmpp-client": "1.2.0",
+		"nativescript-theme-core": "~1.0.2",
+		"nativescript-unit-test-runner": "^0.3.4",
+		"tns-core-modules": "~3.3.0"
 	},
 	"devDependencies": {
+		"babel-traverse": "6.4.5",
+		"babel-types": "6.4.5",
+		"babylon": "6.4.5",
 		"browserify": "^13.1.0",
 		"cross-env": "^3.1.2",
 		"ghooks": "^1.3.2",
@@ -68,9 +74,20 @@
 		"gulp-connect": "^5.0.0",
 		"gulp-notify": "^3.0.0",
 		"gulp-uglify": "^3.0.0",
+		"jasmine-core": "^2.8.0",
 		"jshint": "^2.9.3",
 		"jshint-stylish": "^2.2.1",
+		"karma": "^1.7.1",
+		"karma-jasmine": "^1.1.1",
+		"karma-nativescript-launcher": "^0.4.0",
+		"lazy": "1.0.11",
 		"pump": "^1.0.1",
 		"vinyl-source-stream": "^1.1.0"
-	}
+	},
+  "nativescript": {
+    "id": "org.nativescript.nativescriptquickbloxsdk",
+    "tns-android": {
+      "version": "3.3.1"
+    }
+  }
 }
