--- a/platforms/android/src/main/assets/app/tns_modules/nativescript-theme-core/package.json
+++ b/platforms/android/src/main/assets/app/tns_modules/nativescript-theme-core/package.json
@@ -16,12 +16,12 @@
     "fetchSpec": "~1.0.2"
   },
   "_requiredBy": [
-    "/tns-template-hello-world"
+    "/"
   ],
   "_resolved": "https://registry.npmjs.org/nativescript-theme-core/-/nativescript-theme-core-1.0.4.tgz",
   "_shasum": "cf2880c7fbf2fe5f43e2235d309750790803efe1",
   "_spec": "nativescript-theme-core@~1.0.2",
-  "_where": "C:\\Users\\vladlukhanin\\WebstormProjects\\nativescript-quickblox-sdk\\node_modules\\tns-template-hello-world",
+  "_where": "C:\\QuickBlox\\nativescript-quickblox-sdk",
   "author": {
     "name": "Telerik",
     "email": "support@telerik.com"
