--- a/platforms/android/src/main/assets/app/tns_modules/tns-core-modules-widgets/package.json
+++ b/platforms/android/src/main/assets/app/tns_modules/tns-core-modules-widgets/package.json
@@ -21,7 +21,7 @@
   "_resolved": "https://registry.npmjs.org/tns-core-modules-widgets/-/tns-core-modules-widgets-3.3.0.tgz",
   "_shasum": "d2aa7bb26ad21248c9f5c1f75fea513718666226",
   "_spec": "tns-core-modules-widgets@3.3.0",
-  "_where": "C:\\Users\\vladlukhanin\\WebstormProjects\\nativescript-quickblox-sdk\\node_modules\\tns-core-modules",
+  "_where": "C:\\QuickBlox\\nativescript-quickblox-sdk\\node_modules\\tns-core-modules",
   "author": {
     "name": "NativeScript team"
   },
