--- a/package.json
+++ b/package.json
@@ -58,7 +58,7 @@
 	},
 	"dependencies": {
 		"crypto-js": "3.1.2-2",
-		"nativescript-xmpp-client": "1.2.0",
+		"nativescript-xmpp-client": "soulfly/nativescript-xmpp-client#websockets.rfc6455",
 		"nativescript-theme-core": "~1.0.2",
 		"nativescript-unit-test-runner": "^0.3.4",
 		"tns-core-modules": "~3.3.0"
@@ -84,10 +84,10 @@
 		"pump": "^1.0.1",
 		"vinyl-source-stream": "^1.1.0"
 	},
-  "nativescript": {
-    "id": "org.nativescript.nativescriptquickbloxsdk",
-    "tns-android": {
-      "version": "3.3.1"
-    }
-  }
+	"nativescript": {
+		"id": "org.nativescript.nativescriptquickbloxsdk",
+		"tns-android": {
+			"version": "3.3.1"
+		}
+	}
 }
