--- a/package.json
+++ b/package.json
@@ -58,7 +58,8 @@
 	},
 	"dependencies": {
 		"crypto-js": "3.1.2-2",
-		"nativescript-xmpp-client": "soulfly/nativescript-xmpp-client#websockets.rfc6455",
+		"nativescript-xmpp-client": "1.2.0",
+		"nativescript-websockets": "soulfly/nativescript-websockets#rfc6455",
 		"nativescript-theme-core": "~1.0.2",
 		"nativescript-unit-test-runner": "^0.3.4",
 		"tns-core-modules": "~3.3.0"
